using System.Collections.Generic;
using UnityEngine;

public class EnemyManager : MonoBehaviour
{
    public static List<EnemyHealth> ActiveEnemies = new List<EnemyHealth>();
}