using UnityEngine;

[System.Serializable]
public class RoundEntry
{
    public EnemySpawner.EnemyEntry[] enemies;
}