@startuml
title ClickerTD Klašu Diagramma - Kauja Un Raundi

skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam ranksep 70
skinparam nodesep 55

top to bottom direction

class RoundManager {
  +Instance : RoundManager
  +spawner : EnemySpawner
  +rounds : RoundEntry[]
  +delayBetweenRounds : float
  +endlessConfig : EndlessModeConfig
  -currentRound : int
  -roundText : TMP_Text
  +CurrentRound() : int
  -RoundLoop() : IEnumerator
  -EndlessLoop() : IEnumerator
  -BuildEndlessWave(round : int) : List<EnemyEntry>
  -GetAvailableEndlessEnemies(round : int) : List<EndlessEnemyOption>
  -PickWeightedEnemy(options : List<EndlessEnemyOption>) : EndlessEnemyOption
  -PickModifierOption(round : int, remainingBudget : int) : EndlessEnemyModifierOption
  -GetEndlessBudget(round : int) : int
  -RegisterEndlessMedalProgress() : void
}

class RoundEntry {
  +enemies : EnemyEntry[]
}

class EndlessModeConfig {
  +startingBudget : int
  +budgetIncreasePerRound : int
  +budgetRampEvery : int
  +extraRampAmount : int
  +delayBetweenRounds : float
  +enemyOptions : EndlessEnemyOption[]
  +modifierOptions : EndlessEnemyModifierOption[]
}

class EndlessEnemyOption {
  +prefab : EnemyMover
  +enemyCost : int
  +unlockRound : int
  +lastRound : int
  +weight : int
}

class EndlessEnemyModifierOption {
  +modifiers : EnemyModifierType
  +extraCost : int
  +unlockRound : int
  +weight : int
}

class EnemySpawner {
  +IsSpawning : bool
  +path : Path
  +spawnDelay : float
  +enemyParent : Transform
  +SpawnWave(round : RoundEntry) : IEnumerator
  +SpawnWave(entries : IEnumerable<EnemyEntry>) : IEnumerator
}

class EnemyEntry {
  +prefab : EnemyMover
  +count : int
  +modifiers : EnemyModifierType
}

class EnemyHealth {
  +maxHP : int
  +damageToPlayer : int
  +moneyDrop : int
  -currentHP : int
  -moneyMultiplier : int
  -modifiers : EnemyModifierType
  +TakeDamage(dmg : int) : void
  +TakeDamage(dmg : int, source : EnemyDamageSource) : void
  +ApplyMoneyMultiplier(multiplier : int) : void
  +ApplyModifiers(modifiers : EnemyModifierType) : void
  +HasModifier(modifier : EnemyModifierType) : bool
}

class EnemyMover {
  +speed : float
  -path : Path
  -waypointIndex : int
  -speedMultiplier : float
  -reverseTimer : float
  +Init(path : Path) : void
  +ApplySlow(slowPercent : float) : void
  +ApplyReverse(duration : float) : void
}

class EnemyManager {
  +ActiveEnemies : List<EnemyHealth>
}

class DmgClick {
  -enemyHealth : EnemyHealth
  +ApplyDamage(dmg : int) : void
}

enum EnemyModifierType {
  None
  DoubleHealth
  OnlySecondHitsDealDamage
  OnlyTakesDamageFromTowerEffects
}

enum EnemyDamageSource {
  DirectHit
  TowerEffect
}

class Path {
  +Waypoints : Transform[]
  +width : float
  +pathColor : Color
}

RoundManager *-down- RoundEntry
RoundManager --> EnemySpawner
RoundManager --> EndlessModeConfig
EndlessModeConfig *-down- EndlessEnemyOption
EndlessModeConfig *-down- EndlessEnemyModifierOption
EnemySpawner *-down- EnemyEntry
EnemySpawner --> EnemyMover
EnemySpawner --> EnemyHealth
EnemySpawner --> Path
EnemyHealth --> EnemyModifierType
EnemyHealth --> EnemyDamageSource
EnemyHealth --> EnemyManager
EnemyMover --> Path
DmgClick --> EnemyHealth
RoundEntry --> EnemyEntry

@enduml
